cabal-version:      3.0
name:               haskell-aoc2022
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Tony Bradley
maintainer:         antbradley91@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library lib
    import:           warnings
    exposed-modules:  Util
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.16.4.0,
        relude == 1.1.0.0,
        containers ^>= 0.6.7
    hs-source-dirs:   lib
    default-language: GHC2021

executable day-12
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        relude == 1.1.0.0,
        containers ^>= 0.6.7,
        attoparsec == 0.14.4,
        lib

    hs-source-dirs:   day-12
    default-language: GHC2021
